# lullaby

./: .gitignore  AudioPlayer.cpp  AudioPlayer.h  CLAUDE.md  CMakeLists.txt  LICENSE  Lullabies.cpp  MusicController.cpp  MusicController.h  MusicRepository.cpp  MusicRepository.h  MusicSerializer.cpp  MusicSerializer.h  MusicService.cpp  MusicService.h  README.md  Song.h  build_and_run_release.sh  build_script.sh  instructions_release_build.txt  music.service
.github/: copilot-instructions.md
.github/workflows/: cmake-single-platform.yml  codeql.yml
TestResults/c9b6f2cd-076c-4b69-b777-bfe63023da49/: m4_wr_MATHEW-LAPTOP_2026-03-28.10_06_32.coverage
scripts/: build_and_run_release.sh  build_release.sh  restart.sh
src/: AudioPlayer.cpp  AudioPlayer.h  Lullabies.cpp  MusicController.cpp  MusicController.h  MusicRepository.cpp  MusicRepository.h  MusicSerializer.cpp  MusicSerializer.h  MusicService.cpp  MusicService.h  MusicStatusUpdater.h  SingleThreadExecutor.h  Song.h  SongStatus.h
static/: admin.html  admin.js  index.html  script.js  style.css
tests/: AudioPlayerTests.cpp  CMakeLists.txt  ManagementApiTests.cpp  MusicServiceTests.cpp  RepositoryTests.cpp  SerializerTests.cpp  StatusUpdaterTests.cpp  lullaby_tests.cpp  miniaudio_mocks.h  mock_repository.h  test_integration_musicservice.cpp
